footer gap fix

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,8 +2,8 @@
 	========================================================================== */
 
 footer {
-	margin-bottom: -25px;
-	
+	margin-bottom: -25px !important;
+
 	.wceu23footer {
 		background-image: url(//europe.wordcamp.org/2023/files/2022/12/footer-background-symbol.png);
 		background-size: 800px;
